CSS modified --> fonts amended

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
           <button>Weekly</button>
           <button>Monthly</button>
         </section> -->
+        <p class="text-md">Test</p>
       </section>
       <article id="work" class="container">
         Work 5hrs
