CSS modified --> backgrounds and main containers

--- a/src/index.html
+++ b/src/index.html
@@ -20,22 +20,13 @@
   </head>
   <body>
     <main>
-      <section id="user" class="container">
-        <!-- <section class="user-background container">
-          <img src="./images/image-jeremy.png" alt="user image" />
-          <h1>
-            Report for <br />
-            <span aria-labelledby="user-name">Jeremy Robson</span>
-          </h1>
+      <section id="user" class="container user-container">
+        <section class="user-main">
+          <section class="user-background"></section>
         </section>
-        <section>
-          <button>Daily</button>
-          <button>Weekly</button>
-          <button>Monthly</button>
-        </section> -->
-        <p class="text-md">Test</p>
       </section>
-      <article id="work" class="container">
+      <article id="work" class="container work-background">
+        <article class="container-main"></article>
         Work 5hrs
         <!-- daily -->
         Previous - 7hrs
@@ -49,7 +40,9 @@
         Previous - 128hrs
         <!-- monthly -->
       </article>
-      <article id="play" class="container">
+      <article id="play" class="container play-background">
+        <article class="container-main"></article>
+
         Play 1hr
         <!-- daily -->
         Previous - 2hrs
@@ -63,7 +56,9 @@
         Previous - 29hrs
         <!-- monthly -->
       </article>
-      <article id="study" class="container">
+      <article id="study" class="container study-background">
+        <article class="container-main"></article>
+
         Study 0hrs
         <!-- daily -->
         Previous - 1hr
@@ -77,7 +72,9 @@
         Previous - 19hrs
         <!-- monthly -->
       </article>
-      <article id="exercise" class="container">
+      <article id="exercise" class="container exercise-background">
+        <article class="container-main"></article>
+
         Exercise 1hr
         <!-- daily -->
         Previous - 1hr
@@ -91,7 +88,8 @@
         Previous - 18hrs
         <!-- monthly -->
       </article>
-      <article id="social" class="container">
+      <article id="social" class="container social-background">
+        <article class="container-main"></article>
         Social 1hr
         <!-- daily -->
         Previous - 3hrs
@@ -105,7 +103,8 @@
         Previous - 23hrs
         <!-- monthly -->
       </article>
-      <article id="self-care" class="container">
+      <article id="self-care" class="container self-care-background">
+        <article class="container-main"></article>
         Self Care 0hrs
         <!-- daily -->
         Previous - 1hr
