HTML and CSS modified --> icons

--- a/src/index.html
+++ b/src/index.html
@@ -27,96 +27,51 @@
       </section>
       <article id="work" class="container work-background">
         <article class="container-main"></article>
-        Work 5hrs
-        <!-- daily -->
-        Previous - 7hrs
-        <!-- daily -->
-        32hrs
-        <!-- weekly -->
-        Previous - 36hrs
-        <!-- weekly -->
-        103hrs
-        <!-- monthly -->
-        Previous - 128hrs
-        <!-- monthly -->
+        <img
+          class="icon work-icon"
+          src="./images/icon-work.svg"
+          alt="work icon"
+        />
       </article>
       <article id="play" class="container play-background">
         <article class="container-main"></article>
-
-        Play 1hr
-        <!-- daily -->
-        Previous - 2hrs
-        <!-- daily -->
-        10hrs
-        <!-- weekly -->
-        Previous - 8hrs
-        <!-- weekly -->
-        23hrs
-        <!-- monthly -->
-        Previous - 29hrs
-        <!-- monthly -->
+        <img
+          class="icon play-icon"
+          src="./images/icon-play.svg"
+          alt="play icon"
+        />
       </article>
       <article id="study" class="container study-background">
         <article class="container-main"></article>
-
-        Study 0hrs
-        <!-- daily -->
-        Previous - 1hr
-        <!-- daily -->
-        4hrs
-        <!-- weekly -->
-        Previous - 7hrs
-        <!-- weekly -->
-        13hrs
-        <!-- monthly -->
-        Previous - 19hrs
-        <!-- monthly -->
+        <img
+          class="icon study-icon"
+          src="./images/icon-study.svg"
+          alt="study icon"
+        />
       </article>
       <article id="exercise" class="container exercise-background">
         <article class="container-main"></article>
-
-        Exercise 1hr
-        <!-- daily -->
-        Previous - 1hr
-        <!-- daily -->
-        4hrs
-        <!-- weekly -->
-        Previous - 5hrs
-        <!-- weekly -->
-        11hrs
-        <!-- monthly -->
-        Previous - 18hrs
-        <!-- monthly -->
+        <img
+          class="icon exercise-icon"
+          src="./images/icon-exercise.svg"
+          alt="exercise icon"
+        />
       </article>
       <article id="social" class="container social-background">
         <article class="container-main"></article>
-        Social 1hr
-        <!-- daily -->
-        Previous - 3hrs
-        <!-- daily -->
-        5hrs
-        <!-- weekly -->
-        Previous - 10hrs
-        <!-- weekly -->
-        21hrs
-        <!-- monthly -->
-        Previous - 23hrs
-        <!-- monthly -->
+        <img
+          class="icon social-icon"
+          src="./images/icon-social.svg"
+          alt="social icon"
+        />
       </article>
       <article id="self-care" class="container self-care-background">
         <article class="container-main"></article>
-        Self Care 0hrs
-        <!-- daily -->
-        Previous - 1hr
-        <!-- daily -->
-        2hrs
-        <!-- weekly -->
-        Previous - 2hrs
-        <!-- weekly -->
-        7hrs
-        <!-- monthly -->
-        Previous - 11hrs
-        <!-- monthly -->
+        <img
+          class="icon self-care-icon"
+          src="./images/icon-self-care.svg"
+          alt="self-care icon"
+        />
       </article>
     </main>
   </body>
