HTML and CSS modified --> User (mobile)

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,22 @@
   </head>
   <body>
     <main>
-      <section id="user" class="container user-container">
+      <section id="user" class="user-container">
         <section class="user-main">
-          <section class="user-background"></section>
+          <section class="user-background">
+            <img src="./images/image-jeremy.png" alt="user image" />
+            <h1 class="text-sm font-normal">
+              Report for <br />
+              <span aria-labelledby="user name" class="text-md font-light"
+                >Jeremy Robson</span
+              >
+            </h1>
+          </section>
+          <section class="user-buttons">
+            <button class="text-base">Daily</button>
+            <button class="text-base">Weekly</button>
+            <button class="text-base">Monthly</button>
+          </section>
         </section>
       </section>
       <article id="work" class="container work-background">
@@ -34,44 +47,44 @@
         />
       </article>
       <article id="play" class="container play-background">
-        <article class="container-main"></article>
         <img
           class="icon play-icon"
           src="./images/icon-play.svg"
           alt="play icon"
         />
+        <article class="container-main"></article>
       </article>
       <article id="study" class="container study-background">
-        <article class="container-main"></article>
         <img
           class="icon study-icon"
           src="./images/icon-study.svg"
           alt="study icon"
         />
+        <article class="container-main"></article>
       </article>
       <article id="exercise" class="container exercise-background">
-        <article class="container-main"></article>
         <img
           class="icon exercise-icon"
           src="./images/icon-exercise.svg"
           alt="exercise icon"
         />
+        <article class="container-main"></article>
       </article>
       <article id="social" class="container social-background">
-        <article class="container-main"></article>
         <img
           class="icon social-icon"
           src="./images/icon-social.svg"
           alt="social icon"
         />
+        <article class="container-main"></article>
       </article>
       <article id="self-care" class="container self-care-background">
-        <article class="container-main"></article>
         <img
           class="icon self-care-icon"
           src="./images/icon-self-care.svg"
           alt="self-care icon"
         />
+        <article class="container-main"></article>
       </article>
     </main>
   </body>
