HTML and CSS modified --> data header

--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,25 @@
           </section>
           <section class="user-buttons">
             <button class="text-base">Daily</button>
-            <button class="text-base">Weekly</button>
+            <button class="text-base active">Weekly</button>
             <button class="text-base">Monthly</button>
           </section>
         </section>
       </section>
       <article id="work" class="container work-background">
-        <article class="container-main"></article>
         <img
           class="icon work-icon"
           src="./images/icon-work.svg"
           alt="work icon"
         />
+        <article class="container-main">
+          <article class="data-header">
+            <h2 class="font-bold">Work</h2>
+            <button>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </button>
+          </article>
+        </article>
       </article>
       <article id="play" class="container play-background">
         <img
@@ -52,7 +59,14 @@
           src="./images/icon-play.svg"
           alt="play icon"
         />
-        <article class="container-main"></article>
+        <article class="container-main">
+          <article class="data-header">
+            <h2 class="font-bold">Play</h2>
+            <button>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </button>
+          </article>
+        </article>
       </article>
       <article id="study" class="container study-background">
         <img
@@ -60,7 +74,14 @@
           src="./images/icon-study.svg"
           alt="study icon"
         />
-        <article class="container-main"></article>
+        <article class="container-main">
+          <article class="data-header">
+            <h2 class="font-bold">Study</h2>
+            <button>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </button>
+          </article>
+        </article>
       </article>
       <article id="exercise" class="container exercise-background">
         <img
@@ -68,7 +89,14 @@
           src="./images/icon-exercise.svg"
           alt="exercise icon"
         />
-        <article class="container-main"></article>
+        <article class="container-main">
+          <article class="data-header">
+            <h2 class="font-bold">Exercise</h2>
+            <button>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </button>
+          </article>
+        </article>
       </article>
       <article id="social" class="container social-background">
         <img
@@ -76,7 +104,14 @@
           src="./images/icon-social.svg"
           alt="social icon"
         />
-        <article class="container-main"></article>
+        <article class="container-main">
+          <article class="data-header">
+            <h2 class="font-bold">Social</h2>
+            <button>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </button>
+          </article>
+        </article>
       </article>
       <article id="self-care" class="container self-care-background">
         <img
@@ -84,7 +119,14 @@
           src="./images/icon-self-care.svg"
           alt="self-care icon"
         />
-        <article class="container-main"></article>
+        <article class="container-main">
+          <article class="data-header">
+            <h2 class="font-bold">Self Care</h2>
+            <button>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </button>
+          </article>
+        </article>
       </article>
     </main>
   </body>
