HTML and CSS modified --> data display

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,15 @@
           alt="work icon"
         />
         <article class="container-main">
-          <article class="data-header">
-            <h2 class="font-bold">Work</h2>
+          <article class="data-width data-header">
+            <h2 class="text-base font-bold">Work</h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
+          </article>
+          <article class="data-width data-display">
+            <p class="text-lg font-light">32hrs</p>
+            <p class="data-last-week text-sm">Last Week - 36hrs</p>
           </article>
         </article>
       </article>
@@ -60,11 +64,15 @@
           alt="play icon"
         />
         <article class="container-main">
-          <article class="data-header">
-            <h2 class="font-bold">Play</h2>
+          <article class="data-width data-header">
+            <h2 class="text-base font-bold">Play</h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
+          </article>
+          <article class="data-width data-display">
+            <p class="text-lg font-light">10hrs</p>
+            <p class="data-last-week text-sm">Last Week - 36hrs</p>
           </article>
         </article>
       </article>
@@ -75,11 +83,15 @@
           alt="study icon"
         />
         <article class="container-main">
-          <article class="data-header">
-            <h2 class="font-bold">Study</h2>
+          <article class="data-width data-header">
+            <h2 class="text-base font-bold">Study</h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
+          </article>
+          <article class="data-width data-display">
+            <p class="text-lg font-light">4hrs</p>
+            <p class="data-last-week text-sm">Last Week - 7hrs</p>
           </article>
         </article>
       </article>
@@ -90,11 +102,15 @@
           alt="exercise icon"
         />
         <article class="container-main">
-          <article class="data-header">
-            <h2 class="font-bold">Exercise</h2>
+          <article class="data-width data-header">
+            <h2 class="text-base font-bold">Exercise</h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
+          </article>
+          <article class="data-width data-display">
+            <p class="text-lg font-light">4hrs</p>
+            <p class="data-last-week text-sm">Last Week - 5hrs</p>
           </article>
         </article>
       </article>
@@ -105,11 +121,15 @@
           alt="social icon"
         />
         <article class="container-main">
-          <article class="data-header">
-            <h2 class="font-bold">Social</h2>
+          <article class="data-width data-header">
+            <h2 class="text-base font-bold">Social</h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
+          </article>
+          <article class="data-width data-display">
+            <p class="text-lg font-light">5hrs</p>
+            <p class="data-last-week text-sm">Last Week - 10hrs</p>
           </article>
         </article>
       </article>
@@ -120,11 +140,15 @@
           alt="self-care icon"
         />
         <article class="container-main">
-          <article class="data-header">
-            <h2 class="font-bold">Self Care</h2>
+          <article class="data-width data-header">
+            <h2 class="text-base font-bold">Self Care</h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
+          </article>
+          <article class="data-width data-display">
+            <p class="text-lg font-light">2hrs</p>
+            <p class="data-last-week text-sm">Last Week - 2hrs</p>
           </article>
         </article>
       </article>
