HTML and JS modified --> logic set up

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,10 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light">32hrs</p>
-            <p class="data-last-week text-sm">Last Week - 36hrs</p>
+            <p class="text-lg font-light"><span id="current">32</span>hrs</p>
+            <p class="data-last-week text-sm">
+              Last Week - <span id="previous">36</span>hrs
+            </p>
           </article>
         </article>
       </article>
@@ -71,8 +73,10 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light">10hrs</p>
-            <p class="data-last-week text-sm">Last Week - 36hrs</p>
+            <p class="text-lg font-light"><span id="current">10</span>hrs</p>
+            <p class="data-last-week text-sm">
+              Last Week - <span id="previous">36</span>hrs
+            </p>
           </article>
         </article>
       </article>
@@ -90,8 +94,10 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light">4hrs</p>
-            <p class="data-last-week text-sm">Last Week - 7hrs</p>
+            <p class="text-lg font-light"><span id="current">4</span>hrs</p>
+            <p class="data-last-week text-sm">
+              Last Week - <span id="previous">7</span>hrs
+            </p>
           </article>
         </article>
       </article>
@@ -109,8 +115,10 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light">4hrs</p>
-            <p class="data-last-week text-sm">Last Week - 5hrs</p>
+            <p class="text-lg font-light"><span id="current">4</span>hrs</p>
+            <p class="data-last-week text-sm">
+              Last Week - <span id="previous">5</span>hrs
+            </p>
           </article>
         </article>
       </article>
@@ -128,8 +136,10 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light">5hrs</p>
-            <p class="data-last-week text-sm">Last Week - 10hrs</p>
+            <p class="text-lg font-light"><span id="current">5</span>hrs</p>
+            <p class="data-last-week text-sm">
+              Last Week - <span id="previous">10</span>hrs
+            </p>
           </article>
         </article>
       </article>
@@ -147,8 +157,10 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light">2hrs</p>
-            <p class="data-last-week text-sm">Last Week - 2hrs</p>
+            <p class="text-lg font-light"><span id="current">2</span>hrs</p>
+            <p class="data-last-week text-sm">
+              Last Week - <span id="previous">2</span>hrs
+            </p>
           </article>
         </article>
       </article>
