HTML and JS modified --> data dynamically parsed

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 class="text-base font-bold">Work</h2>
+            <h2 id="title" class="text-base font-bold"></h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
@@ -67,7 +67,7 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 class="text-base font-bold">Play</h2>
+            <h2 id="title" class="text-base font-bold"></h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
@@ -88,7 +88,7 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 class="text-base font-bold">Study</h2>
+            <h2 id="title" class="text-base font-bold"></h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
@@ -109,7 +109,7 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 class="text-base font-bold">Exercise</h2>
+            <h2 id="title" class="text-base font-bold"></h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
@@ -130,7 +130,7 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 class="text-base font-bold">Social</h2>
+            <h2 id="title" class="text-base font-bold"></h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
@@ -151,7 +151,7 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 class="text-base font-bold">Self Care</h2>
+            <h2 id="title" class="text-base font-bold"></h2>
             <button>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </button>
