--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="./src/style.css" />
+    <script src="src/main.js" defer></script>
   </head>
   <body>
     <main>
       <section id="user" class="user-container">
         <section class="user-main">
           <section class="user-background">
-            <img src="./images/image-jeremy.png" alt="user image" />
+            <img src="./src/images/image-jeremy.png" alt="user image" />
             <h1 class="text-sm font-normal">
               Report for <br />
               <span aria-labelledby="user name" class="text-md font-light"
@@ -39,16 +39,13 @@
         </section>
       </section>
       <article id="work" class="container work-background">
-        <img
-          class="icon work-icon"
-          src="./images/icon-work.svg"
-          alt="work icon"
-        />
+        <img src/ class="icon work-icon" src="./images/icon-work.svg" alt="work
+        icon" />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
             <button>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <img src="./src/images/icon-ellipsis.svg" alt="" />
             </button>
           </article>
           <article class="data-width data-display">
@@ -62,14 +59,15 @@
       <article id="play" class="container play-background">
         <img
           class="icon play-icon"
-          src="./images/icon-play.svg"
-          alt="play icon"
+          src="./src/images/icon-play.svg"
+          alt="play
+        icon"
         />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
             <button>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <img src="./src/images/icon-ellipsis.svg" alt="" />
             </button>
           </article>
           <article class="data-width data-display">
@@ -83,14 +81,14 @@
       <article id="study" class="container study-background">
         <img
           class="icon study-icon"
-          src="./images/icon-study.svg"
+          src="./src/images/icon-study.svg"
           alt="study icon"
         />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
             <button>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <img src="./src/images/icon-ellipsis.svg" alt="" />
             </button>
           </article>
           <article class="data-width data-display">
@@ -104,14 +102,14 @@
       <article id="exercise" class="container exercise-background">
         <img
           class="icon exercise-icon"
-          src="./images/icon-exercise.svg"
+          src="./src/images/icon-exercise.svg"
           alt="exercise icon"
         />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
             <button>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <img src="./src/images/icon-ellipsis.svg" alt="" />
             </button>
           </article>
           <article class="data-width data-display">
@@ -125,14 +123,14 @@
       <article id="social" class="container social-background">
         <img
           class="icon social-icon"
-          src="./images/icon-social.svg"
+          src="./src/images/icon-social.svg"
           alt="social icon"
         />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
             <button>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <img src="./src/images/icon-ellipsis.svg" alt="" />
             </button>
           </article>
           <article class="data-width data-display">
@@ -146,14 +144,14 @@
       <article id="self-care" class="container self-care-background">
         <img
           class="icon self-care-icon"
-          src="./images/icon-self-care.svg"
+          src="./src/images/icon-self-care.svg"
           alt="self-care icon"
         />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
             <button>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <img src="./src/images/icon-ellipsis.svg" alt="" />
             </button>
           </article>
           <article class="data-width data-display">
