aria labels and README

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
         </section>
       </section>
       <article id="work" class="container work-background">
-        <img src/ class="icon work-icon" src="./images/icon-work.svg" alt="work
-        icon" />
+        <img
+          class="icon work-icon"
+          src="./src/images/icon-work.svg"
+          alt="work
+        icon"
+        />
         <article class="container-main">
           <article class="data-width data-header">
             <h2 id="title" class="text-base font-bold"></h2>
@@ -49,9 +53,12 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light"><span id="current">32</span>hrs</p>
+            <p class="text-lg font-light">
+              <span aria-labelledby="current" id="current">32</span>hrs
+            </p>
             <p class="data-last-week text-sm">
-              Last Week - <span id="previous">36</span>hrs
+              Last Week -
+              <span aria-labelledby="previous" id="previous">36</span>hrs
             </p>
           </article>
         </article>
@@ -71,9 +78,12 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light"><span id="current">10</span>hrs</p>
+            <p class="text-lg font-light">
+              <span aria-labelledby="current" id="current">10</span>hrs
+            </p>
             <p class="data-last-week text-sm">
-              Last Week - <span id="previous">36</span>hrs
+              Last Week -
+              <span aria-labelledby="previous" id="previous">36</span>hrs
             </p>
           </article>
         </article>
@@ -92,9 +102,12 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light"><span id="current">4</span>hrs</p>
+            <p class="text-lg font-light">
+              <span aria-labelledby="current" id="current">4</span>hrs
+            </p>
             <p class="data-last-week text-sm">
-              Last Week - <span id="previous">7</span>hrs
+              Last Week -
+              <span aria-labelledby="previous" id="previous">7</span>hrs
             </p>
           </article>
         </article>
@@ -113,9 +126,12 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light"><span id="current">4</span>hrs</p>
+            <p class="text-lg font-light">
+              <span aria-labelledby="current" id="current">4</span>hrs
+            </p>
             <p class="data-last-week text-sm">
-              Last Week - <span id="previous">5</span>hrs
+              Last Week -
+              <span aria-labelledby="previous" id="previous">5</span>hrs
             </p>
           </article>
         </article>
@@ -134,9 +150,12 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light"><span id="current">5</span>hrs</p>
+            <p class="text-lg font-light">
+              <span aria-labelledby="current" id="current">5</span>hrs
+            </p>
             <p class="data-last-week text-sm">
-              Last Week - <span id="previous">10</span>hrs
+              Last Week -
+              <span aria-labelledby="previous" id="previous">10</span>hrs
             </p>
           </article>
         </article>
@@ -155,9 +174,12 @@
             </button>
           </article>
           <article class="data-width data-display">
-            <p class="text-lg font-light"><span id="current">2</span>hrs</p>
+            <p class="text-lg font-light">
+              <span aria-labelledby="current" id="current">2</span>hrs
+            </p>
             <p class="data-last-week text-sm">
-              Last Week - <span id="previous">2</span>hrs
+              Last Week -
+              <span aria-labelledby="previous" id="previous">2</span>hrs
             </p>
           </article>
         </article>
