--- a/index.html
+++ b/index.html
@@ -47,18 +47,16 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 id="title" class="text-base font-bold"></h2>
-            <button>
-              <img src="./src/images/icon-ellipsis.svg" alt="" />
-            </button>
+            <h2 id="container-title" class="text-base font-bold"></h2>
+            <img src="./src/images/icon-ellipsis.svg" alt="" />
           </article>
           <article class="data-width data-display">
             <p class="text-lg font-light">
-              <span aria-labelledby="current" id="current">32</span>hrs
+              <span aria-labelledby="current-value" id="current">32</span>hrs
             </p>
             <p class="data-last-week text-sm">
               Last Week -
-              <span aria-labelledby="previous" id="previous">36</span>hrs
+              <span aria-labelledby="previous-value" id="previous">36</span>hrs
             </p>
           </article>
         </article>
@@ -72,18 +70,16 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 id="title" class="text-base font-bold"></h2>
-            <button>
-              <img src="./src/images/icon-ellipsis.svg" alt="" />
-            </button>
+            <h2 id="container-title" class="text-base font-bold"></h2>
+            <img src="./src/images/icon-ellipsis.svg" alt="" />
           </article>
           <article class="data-width data-display">
             <p class="text-lg font-light">
-              <span aria-labelledby="current" id="current">10</span>hrs
+              <span aria-labelledby="current-value" id="current">10</span>hrs
             </p>
             <p class="data-last-week text-sm">
               Last Week -
-              <span aria-labelledby="previous" id="previous">36</span>hrs
+              <span aria-labelledby="previous-value" id="previous">36</span>hrs
             </p>
           </article>
         </article>
@@ -96,18 +92,16 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 id="title" class="text-base font-bold"></h2>
-            <button>
-              <img src="./src/images/icon-ellipsis.svg" alt="" />
-            </button>
+            <h2 id="container-title" class="text-base font-bold"></h2>
+            <img src="./src/images/icon-ellipsis.svg" alt="" />
           </article>
           <article class="data-width data-display">
             <p class="text-lg font-light">
-              <span aria-labelledby="current" id="current">4</span>hrs
+              <span aria-labelledby="current-value" id="current">4</span>hrs
             </p>
             <p class="data-last-week text-sm">
               Last Week -
-              <span aria-labelledby="previous" id="previous">7</span>hrs
+              <span aria-labelledby="previous-value" id="previous">7</span>hrs
             </p>
           </article>
         </article>
@@ -120,18 +114,16 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 id="title" class="text-base font-bold"></h2>
-            <button>
-              <img src="./src/images/icon-ellipsis.svg" alt="" />
-            </button>
+            <h2 id="container-title" class="text-base font-bold"></h2>
+            <img src="./src/images/icon-ellipsis.svg" alt="" />
           </article>
           <article class="data-width data-display">
             <p class="text-lg font-light">
-              <span aria-labelledby="current" id="current">4</span>hrs
+              <span aria-labelledby="current-value" id="current">4</span>hrs
             </p>
             <p class="data-last-week text-sm">
               Last Week -
-              <span aria-labelledby="previous" id="previous">5</span>hrs
+              <span aria-labelledby="previous-value" id="previous">5</span>hrs
             </p>
           </article>
         </article>
@@ -144,18 +136,16 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 id="title" class="text-base font-bold"></h2>
-            <button>
-              <img src="./src/images/icon-ellipsis.svg" alt="" />
-            </button>
+            <h2 id="container-title" class="text-base font-bold"></h2>
+            <img src="./src/images/icon-ellipsis.svg" alt="" />
           </article>
           <article class="data-width data-display">
             <p class="text-lg font-light">
-              <span aria-labelledby="current" id="current">5</span>hrs
+              <span aria-labelledby="current-value" id="current">5</span>hrs
             </p>
             <p class="data-last-week text-sm">
               Last Week -
-              <span aria-labelledby="previous" id="previous">10</span>hrs
+              <span aria-labelledby="previous-value" id="previous">10</span>hrs
             </p>
           </article>
         </article>
@@ -168,18 +158,16 @@
         />
         <article class="container-main">
           <article class="data-width data-header">
-            <h2 id="title" class="text-base font-bold"></h2>
-            <button>
-              <img src="./src/images/icon-ellipsis.svg" alt="" />
-            </button>
+            <h2 id="container-title" class="text-base font-bold"></h2>
+            <img src="./src/images/icon-ellipsis.svg" alt="" />
           </article>
           <article class="data-width data-display">
             <p class="text-lg font-light">
-              <span aria-labelledby="current" id="current">2</span>hrs
+              <span aria-labelledby="current-value" id="current">2</span>hrs
             </p>
             <p class="data-last-week text-sm">
               Last Week -
-              <span aria-labelledby="previous" id="previous">2</span>hrs
+              <span aria-labelledby="previous-value" id="previous">2</span>hrs
             </p>
           </article>
         </article>
